fix: use per-project dirs for intermediates

--- a/test1/test1.vcxproj
+++ b/test1/test1.vcxproj
@@ -35,19 +35,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\</OutDir>
-    <IntDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\intermediate\</IntDir>
+    <IntDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\intermediate\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\</OutDir>
-    <IntDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\intermediate\</IntDir>
+    <IntDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\intermediate\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\</OutDir>
-    <IntDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\intermediate\</IntDir>
+    <IntDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\intermediate\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\</OutDir>
-    <IntDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\intermediate\</IntDir>
+    <IntDir>$(SolutionDir)bin\$(Configuration)\$(PlatformShortName)\intermediate\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
